[package]
name = "setwall"
version = "1.0.3"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"
description = "Set your wallpaper on Wayland or X11."
homepage = "https://github.com/fosskers/rs-setwall"
repository = "https://github.com/fosskers/rs-setwall"
readme = "README.md"
license = "MIT"
keywords = ["wallpaper"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
gumdrop = "0.8"
rand = "0.8"

[profile.release]
lto = true